# brick-breaker

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  CoreTypes.h  Game.cpp  Game.h  GameUtils.h  main.cpp
src/input/: InputManager.cpp  InputManager.h
src/rendering/: Display.cpp  Display.h
src/systems/: InputManager.cpp  InputManager.h  LevelSystem.cpp  LevelSystem.h  Physics.cpp  Physics.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  SystemManager.h
